--- a/accounts/static/accounts/staticsignup.css
+++ b/accounts/static/accounts/staticsignup.css
@@ -5,7 +5,7 @@
 
 
 body {
-    font-family: 'Harmattan', sans-serif;
+  font-family: 'Lalezar', cursive;
   font-weight: 700;
   font-size: 15px;
   line-height: 1.7;
