--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<html lang="fa">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>سیستم هوشمند سانا</title>
+        </head>
+        <body>
+        <img src="LOGO3-removebg.png" alt="sana logo">
+        <h1>به سیستم هوشمند سانا خوش آمدید</h1>
+        <a href="LoginForm/login.html" class="btnH">ورود</a>
+        <a href="SignUpForm/signup.html"class="btnH">ثبت نام</a>
+        <img  src="HOME 2.svg" alt="">
+        </body>
 </html>
