--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -7,11 +7,11 @@
         <title>سیستم هوشمند سانا</title>
         </head>
         <body>
-        <img src="LOGO3-removebg.png" alt="sana logo">
+        <img src="media/LOGO3-removebg.png" alt="sana logo">
         <h1>به سیستم هوشمند سانا خوش آمدید</h1>
         <a href="accounts/login" class="btnH">ورود</a>
         <a href="accounts/signup"class="btnH">ثبت نام</a>
-        <img  src="HOME 2.svg" alt="">
+        <img  src="media/HOME 2.svg" alt="">
         <link rel="stylesheet" href="{% static 'accounts/staticlogin.css' %}">
         </body>
 </html>
