--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -47,7 +47,7 @@
                                                     placeholder="رمز عبور" id="logpass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="#" class="btn mt-4">ثبت نام</a>
+                                            <a href="accounts/login.html" class="btn mt-4">ثبت نام</a>
                                         </div>
                                     </div>
                                 </div>
