--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -12,6 +12,6 @@
         <a href="accounts/login" class="btnH">ورود</a>
         <a href="accounts/signup"class="btnH">ثبت نام</a>
         <img  src="media/HOME 2.svg" alt="">
-        <link rel="stylesheet" href="{% static 'accounts/staticlogin.css' %}">
+        <link rel="stylesheet" href="{% static 'Sana/statichomepython.css' %}">
         </body>
 </html>
