--- a/Sana/static/Sana/statichome.css
+++ b/Sana/static/Sana/statichome.css
@@ -1,13 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Harmattan:wght@400;700&family=Ingrid+Darling&family=Lalezar&display=swap');
-body{
-    position: relative;
-    width: 1440px;
-    height: 1024px;
-    
-    background: #BFB0D2;
-    font-family: 'Harmattan', sans-serif;
-    font-weight: 700;
-    font-size: 15px;
-    line-height: 1.7;
-    
+
+
+body {
+  font-family: 'Lalezar', cursive;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 1.7;
+  color: #150759;
+  background-color: #BFB0D2;
+  overflow-x: hidden;
+}
+.btnH{
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 32px;
+gap: 10px;
+font-size: x-large;
+position: absolute;
+left: .77%;
+right: 51.73%;
+top: 0%;
+bottom: 86.62%;
+color: #000000;
+background: #F3F0E6;
+border-radius: 30px;
+top: 360px;
+left: 760px;
+width: 100px;
+}
+.btnV{
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 32px ;
+gap: 10px;
+color: #000000;
+position: absolute;
+left: 55.18%;
+right: 32.32%;
+top: 0%;
+bottom: 86.62%;
+font-size: x-large;
+background: #F3F0E6;
+border-radius: 30px;
+top: 360px; 
+left: 560px;
+width: 100px;
+}
+
+.pic{
+  position: absolute;
+width: 321px;
+height: 362px;
+left: 559px;
+top: -60px;
+
+}
+.ttle{
+  position: absolute;
+width: 625px;
+height: 75px;
+left: 510px;
+top: 211px;
+
+font-family: 'Lalezar';
+font-style: normal;
+font-weight: 400;
+font-size: 35px;
+line-height: 75px;
+
+color: #000000;
+}
+.pic2{
+  position: absolute;
+width: 1448px;
+height: 710px;
+left: 3px;
+top: 327px;
+
 }
