--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -1,17 +1,20 @@
-{% load static %}
 <html lang="fa">
-    <head>
+    <link rel="stylesheet" href="style.css" />
+<head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>سیستم هوشمند سانا</title>
         </head>
         <body>
-        <img src="media/LOGO3-removebg.png" alt="sana logo">
-        <h1>به سیستم هوشمند سانا خوش آمدید</h1>
-        <a href="accounts/login" class="btnH">ورود</a>
-        <a href="accounts/signup"class="btnH">ثبت نام</a>
-        <img  src="media/HOME 2.svg" alt="">
-        <link rel="stylesheet" href="{% static 'Sana/statichomepython.css' %}">
+            <div class="body">
+                <div class="logo">
+        <img  class="pic mt-2"src="LOGO3-removebg.png" alt="sana logo">
+    </div>
+        <h1 class="ttle mt-4">به سیستم هوشمند سانا خوش آمدید</h1>
+        <a   href="LoginForm/login.html" class="btnV mt-6">ورود</a>
+        <a href="SignUpForm/signup.html"class="btnH mt-8">ثبت نام</a>
+        <img  class="pic2 "src="HOME 2.svg" alt="">
+    </div>
         </body>
 </html>
