--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -11,10 +11,16 @@
                 <div class="logo">
         <img  class="pic mt-2"src="LOGO3-removebg.png" alt="sana logo">
     </div>
+    
         <h1 class="ttle mt-4">به سیستم هوشمند سانا خوش آمدید</h1>
         <a   href="LoginForm/login.html" class="btnV mt-6">ورود</a>
         <a href="SignUpForm/signup.html"class="btnH mt-8">ثبت نام</a>
-        <img  class="pic2 "src="HOME 2.svg" alt="">
+     
+     
+        <img class="pic2" src="welcome.svg.svg" alt="">
+    
     </div>
+
+
         </body>
 </html>
