--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -13,8 +13,8 @@
     </div>
     
         <h1 class="ttle mt-4">به سیستم هوشمند سانا خوش آمدید</h1>
-        <a   href="LoginForm/login.html" class="btnV mt-6">ورود</a>
-        <a href="SignUpForm/signup.html"class="btnH mt-8">ثبت نام</a>
+        <a   href="accounts/login" class="btnV mt-6">ورود</a>
+        <a href="accounts/signup"class="btnH mt-8">ثبت نام</a>
      
      
         <img class="pic2" src="welcome.svg.svg" alt="">
