--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -17,7 +17,7 @@
         <a href="accounts/signup"class="btnH mt-8">ثبت نام</a>
      
      
-        <img class="pic2" src="welcome.svg.svg" alt="">
+        <img class="pic2" src="media/welcome.svg.svg" alt="">
     
     </div>
 
