--- a/Sana/templates/Sana/home.html
+++ b/Sana/templates/Sana/home.html
@@ -1,5 +1,6 @@
+{% load static %}
 <html lang="fa">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'Sana/statichome.css' %}">
 <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,16 +10,16 @@
         <body>
             <div class="body">
                 <div class="logo">
-        <img  class="pic mt-2"src="LOGO3-removebg.png" alt="sana logo">
+        <img  class="pic mt-2"src="media/LOGO3-removebg.png" alt="sana logo">
     </div>
-    
+
         <h1 class="ttle mt-4">به سیستم هوشمند سانا خوش آمدید</h1>
         <a   href="accounts/login" class="btnV mt-6">ورود</a>
         <a href="accounts/signup"class="btnH mt-8">ثبت نام</a>
-     
-     
+
+
         <img class="pic2" src="media/welcome.svg.svg" alt="">
-    
+
     </div>
 
 
