--- a/scores/templates/scores/create_Students.html
+++ b/scores/templates/scores/create_Students.html
@@ -7,15 +7,6 @@
 </head>
 <body>
 
-  <!--
-  <label for="Name">Name:</label>
-  <input type="text" id="Name" name="Name">
-  <label for="Score">Score:</label>
-  <input type="text" id="Score" name="Score">
-  -->
-<!--  <h1>Renew: {{ students.name }}</h1>-->
-<!--  <p>Borrower: {{ students.score }}</p>-->
-<!--  <p {% if students.is_overdue %} class="text-danger"{% endif %} >Due date: {{ students.due_back }}</p>-->
 
   <form action="" method="post">
     {% csrf_token %}
@@ -25,20 +16,29 @@
     <input type="submit" value="ثبت">
   </form>
 
-<!--  <form action="" method="Post">-->
-<!--      {{form}}-->
-<!--      {% csrf_token%}-->
-<!--      <button type="submit" class="btn mt-4">ثبت</button>-->
+  <form action='{% url "scores:delete" %} ', method="POST">
 
+      {% csrf_token %}
+    <table>
+         {{ form.as_table }}
+    </table>
 
-<!--  </form>-->
+        <input type="submit" value="حذف">
+  </form>
 
+  <ol>
       {% for student in students %}
+
         <li>
+
             {{student.name}}
             {{student.score}}
+
+
         </li>
       {% endfor %}
+  </ol>
+
 
 
       {% if user.is_authenticated %}
@@ -49,24 +49,8 @@
       {% endif %}
 
 
- <!-- <h1>  </h1>
-  <div class=""container> Students </div>
-
-  <form method="POST">
-    <ul class="list-group">
-        {% for students in Students %}
-
-            <li class="list-group-itemtodo-item">
-              {{Students.name}}
-              <a class='btn btn-danger' href="{% url 'todoapp:todo_item_delete' students.id %}">X</a>
-            </li>
-
-        {% endfor %}
-        </ul>
-
-</form>-->
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
+
+ </body>
 </html>
