--- a/scores/templates/scores/create_Students.html
+++ b/scores/templates/scores/create_Students.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Create Students</title>
+    <title>ثبت نمرات انضباط</title>
 </head>
 <body>
 
@@ -39,13 +39,19 @@
         </li>
       {% endfor %}
   </ol>
+     {% if user.is_authenticated %}
+      <form action='{% url "scores:print" %}' method="POST">
+          {% csrf_token %}
+          <button class='btn btn-link'>چاپ لیست</button>
+      </form>
+      {% endif %}
 
 
 
       {% if user.is_authenticated %}
       <form action='{% url "accounts:logout" %}' method="POST">
           {% csrf_token %}
-          <button class='btn btn-link'>logout</button>
+          <button class='btn btn-link'>خروج</button>
       </form>
       {% endif %}
 
