--- a/scores/templates/scores/scores.html
+++ b/scores/templates/scores/scores.html
@@ -3,18 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Scores</title>
+    <title>چاپ نمرات</title>
 </head>
 <body>
-{% for student in students %}
-      <li>
-          {{student.name}}
-          {{student.score}}
-      </li>
-{% endfor %}
+<table>
+
+  <tbody>
+  <style>
+  table {
+    border-collapse: collapse;
+    width: 35%;
+    direction: rtl;
+    position: fixed;
+    top: 10px;  /* موقعیت بالا */
+    right: 10px;  /* موقعیت راست */
+    z-index: 999;
+  }
+
+  th, td {
+    padding: 10px;  /* فاصله دلخواه بین ستون‌ها */
+    text-align: right;
+  }
+
+  th {
+    background-color: #f2f2f2;
+  }
+
+  tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+</style>
+
+<table>
+  <thead>
+    <tr>
+      <th>نام و نام خانوادگی</th>
+      <th>نمره انضباط</th>
+    </tr>
+  </thead>
+  <tbody>
+
+      {% for student in students|dictsort:"name" %}
+
+      <tr>
+
+        <td>
 
 
+            {{student.name}}
 
+
+        </td>
+        <td>{{student.score}}</td>
+
+      </tr>
+
+    {% endfor %}
+
+  </tbody>
+</table>
+  </tbody>
+</table>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
