--- a/classes/statics/classes.css
+++ b/classes/statics/classes.css
@@ -1,291 +1,287 @@
-/* Please ❤ this if you like it! */
-
-
 @import url('https://fonts.googleapis.com/css2?family=Harmattan:wght@400;700&family=Ingrid+Darling&family=Lalezar&display=swap');
-
-
 body {
-  font-family: 'Lalezar', cursive;
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 1.7;
-  color: #150759;
-  background-color: #BFB0D2;
-  overflow-x: hidden;
-}
-a {
-  cursor: pointer;
-  transition: all 200ms linear;
-}
-a:hover {
-  text-decoration: none;
-}
-.link {
-  color: #150759
-}
-.link:hover {
-  color: #f4c871;
-}
-p {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.7;
-}
-h4 {
-  font-weight: 600;
-}
-h6 span {
-  padding: 0 20px;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.section {
-  position: relative;
-  width: 100%;
-  display: block;
-}
-.full-height {
-  min-height: 100vh;
-}
-[type="checkbox"]:checked,
-[type="checkbox"]:not(:checked) {
-  position: absolute;
-  left: -9999px;
-}
-.checkbox:checked + label,
-.checkbox:not(:checked) + label {
-  position: relative;
-  display: block;
-  text-align: center;
-  width: 60px;
-  height: 16px;
-  border-radius: 8px;
-  padding: 0;
-  margin: 10px auto;
-  cursor: pointer;
-  background-color: #f4c871;
-}
-.checkbox:checked + label:before,
-.checkbox:not(:checked) + label:before {
-  position: absolute;
-  display: block;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  color: #f4c871;
-  background-color: #c75e6b;
-  font-family: 'Harmattan', sans-serif;
+    font-family: 'Lalezar', cursive;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 1.7;
+    color: #150759;
+    background-color: #F3F0E6;
+    overflow-x: hidden;
+  }
+  .bck{
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+  }
+  .header{
+    position: absolute;
+    left: 31.39%;
+    right: 26.54%;
+    top: -5%;
+    bottom: 89.75%;
+    
+    font-family: 'Lalezar';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 75px;
+    
+    color: #000000;
+    
+  }
+  .recppl{
+    position: absolute;
+    left: 1.8%;
+    right: 1.73%;
+    top: 15%;
+    bottom: 3.71%; 
+    border-radius: 30px;
+    
+  }
+  .logo{
+    position: absolute;
+    left: 2.56%;
+    right: 78.66%;
+    top: 8.11%;
+    bottom: 65.33%;
+    
+    background: url(LOGO3-removebg.png);
+  }
+  .Namayesh{
+    position: absolute;
+    left: 74.77%;
+    right: 6.44%;
+    top: 13.46%;
+    bottom: 74.22%;
+    
+    font-family: 'Lalezar';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 45px;
+    line-height: 75px;
+    
+    color: #150759;
+    
+  }
+  .recwhhaft{
+      
+position: absolute;
+left: 67.64%;
+right: 5.61%;
+top: 39.05%;
+bottom: 8.98%;
+border-radius: 30px;
 
-  content: "\eb4f";
-  z-index: 20;
-  top: -10px;
-  left: -10px;
-  line-height: 36px;
-  text-align: center;
-  font-size: 24px;
-  transition: all 0.5s ease;
-}
-.checkbox:checked + label:before {
-  transform: translateX(44px) rotate(-270deg);
-}
+  }
+  .haftomTitle{
+    position: absolute;
+    left: 78.59%;
+    right: 15.11%;
+    top: 33.96%;
+    bottom: 61.72%;
+    
+    font-family: 'Lalezar';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+    
+    color: #000000;
+    
+  }
+  .hft1{
+    position: absolute;
+    left: 82.4%;
+    right: 9.63%;
+    top: 52.23%;
+    bottom: 53.81%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+  }
+  .hft2{
+    position: absolute;
+    left: 82.81%;
+    right: 9.63%;
+    top: 58.09%;
+    bottom: 47.95%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+  }
+  .hft3{
+    position: absolute;
+    left: 82.4%;
+    right: 9.49%;
+    top: 63.95%;
+    bottom: 42.09%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+  }
+  .recwhhasht{
+    position: absolute;
+    left: 36.87%;
+    right: 35.62%;
+    top: 39.05%;
+    bottom: 8.98%;
+    border-radius: 30px;
+  }
+  .hashtomTitle{
+    position: absolute;
+    left: 46.92%;
+    right: 45.53%;
+    top: 33.76%;
+    bottom: 61.91%;
+    
+    font-family: 'Lalezar';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+    
+    color: #000000;
+    
+  }
+  .hsht1{
+    position: absolute;
+    left: 52.04%;
+    right: 39.36%;
+    top: 52.23%;
+    bottom: 53.81%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+  }
+  .hsht2{
+    position: absolute;
+    left: 52.46%;
+    right: 39.36%;
+    top: 57.8%;
+    bottom: 48.24%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+  }
+  .hsht3{
+    position: absolute;
+    left: 51.98%;
+    right: 39.36%;
+    top: 63.37%;
+    bottom: 42.68%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+    
+  }
+  .recwhnoh{
+      
+position: absolute;
+left: 6.03%;
+right: 66.39%;
+top: 39.05%;
+bottom: 8.98%;
 
-.card-3d-wrap {
-  position: relative;
-  width: 440px;
-  max-width: 100%;
-  height: 400px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  perspective: 800px;
-  margin-top: 60px;
-}
-.card-3d-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  transition: all 600ms ease-out;
-}
-.card-front,
-.card-back {
-  width: 100%;
-  height: 100%;
-  background-color: #196aa5;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg");
-  background-position: bottom center;
-  background-repeat: no-repeat;
-  background-size: 300%;
-  position: absolute;
-  border-radius: 6px;
-  left: 0;
-  top: 0;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-.card-back {
-  transform: rotateY(180deg);
-}
-.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
-  transform: rotateY(180deg);
-}
-.center-wrap {
-  position: absolute;
-  width: 100%;
-  padding: 0 35px;
-  top: 50%;
-  left: 0;
-  transform: translate3d(0, -50%, 35px) perspective(100px);
-  z-index: 20;
-  display: block;
-}
-
-.form-group {
-  position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-.form-style {
-  padding: 13px 20px;
-  padding-left: 55px;
-  height: 48px;
-  width: 100%;
-  font-weight: 500;
-  border-radius: 4px;
-  font-size: 14px;
-  line-height: 22px;
-  letter-spacing: 0.5px;
-  outline: none;
-  color: #150759;
-  background-color: #f3f0e6;
-  border: none;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
-}
-.form-style:focus,
-.form-style:active {
-  border: none;
-  outline: none;
-  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
-}
-.input-icon {
-  position: absolute;
-  top: 14px;
-  left: 18px;
-  height: 48px;
-  font-size: 24px;
-  line-height: 48px;
-  text-align: left;
-  color: #f4c871;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-
-.form-group input:-ms-input-placeholder {
-  color: #150759;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input::-moz-placeholder {
-  color: #150759;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:-moz-placeholder {
-  color: #150759;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input::-webkit-input-placeholder {
-  color: #150759;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus:-ms-input-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus::-moz-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus:-moz-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus::-webkit-input-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-
-.btn {
-  border-radius: 4px;
-  height: 44px;
-  font-size: 13px;
-  font-weight: 600;
-  text-transform: uppercase;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  padding: 0 30px;
-  letter-spacing: 1px;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  text-align: center;
-  border: none;
-  background-color: #f4c871;
-  color: #150759;
-  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
-}
-.btn:active,
-.btn:focus {
-  background-color: #f3f0e6;
-  color: #c75e6b;
-  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
-}
-.btn:hover {
-  background-color: #f3f0e6;
-  color: #150759;
-  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
-}
-
-.logo {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  display: block;
-  z-index: 100;
-  transition: all 250ms linear;
-}
-.logo img {
-  height: 26px;
-  width: auto;
-  display: block;
-}
-
-
+background: rgba(243, 240, 230, 0.8);
+border-radius: 30px;
+  }
+  .nohomTitle{
+    position: absolute;
+    left: 17.53%;
+    right: 78.24%;
+    top: 33.37%;
+    bottom: 62.3%;
+    
+    font-family: 'Lalezar';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+    
+    color: #000000;
+  }
+  .noh1{
+    position: absolute;
+    left: 22.73%;
+    right: 71.24%;
+    top: 52.23%;
+    bottom: 54.49%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+  }
+  .noh2{
+    position: absolute;
+    left: 23.15%;
+    right: 71.24%;
+    top: 57.8%;
+    bottom: 48.93%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+  }
+  .noh3{
+    position: absolute;
+    left: 22.66%;
+    right: 71.24%;
+    top: 63.37%;
+    bottom: 43.36%;
+    
+    font-family: 'Harmattan';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 61px;
+    
+    color: #000000;
+    
+  }
+  
