--- a/classes/templates/classes/classes.html
+++ b/classes/templates/classes/classes.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="fa">
     <link rel="stylesheet" href="{% static 'statics/classes.css' %}">
 <head>
@@ -12,16 +13,16 @@
     <form action='{% url "scores:scores" %}' method="POST">
         {% csrf_token %}
     <div class="body">
-        <img class="bck"src="background.png" alt="">
+        <img class="bck"src="media/background.png" alt="">
     <div class="header">
         <h3>به سامانه هوشمند سانا خوش آمدید</h3>
     </div>
     <div class="middleBox">
-        <img class="recppl"src="Rectangle 1.png" alt="">
-            <img  class="logo"src="LOGO3-removebg 1.png" alt="">
+        <img class="recppl"src="media/Rectangle 1.png" alt="">
+            <img  class="logo"src="media/LOGO3-removebg 1.png" alt="">
         <h4 class="Namayesh">نمایش کلاس ها</h4>
         <div class="haftom">
-            <img class="recwhhaft"src="Rectangle 2.png" alt="">
+            <img class="recwhhaft"src="media/Rectangle 2.png" alt="">
             <h4 class="haftomTitle">هفتم</h4>
             
             <a class="hft1 mt-2"href="#">هفت یک</a>
@@ -30,7 +31,7 @@
         
         </div>
         <div class="hashtom">
-            <img class="recwhhasht"src="Rectangle 2.png" alt="">
+            <img class="recwhhasht"src="media/Rectangle 2.png" alt="">
             <h4 class="hashtomTitle">هشتم</h4>
          
             <a class="hsht1 mt-2"href="#">هشتم یک</a>
@@ -39,7 +40,7 @@
         
         </div>
         <div class="nohom">
-            <img class="recwhnoh"src="Rectangle 2.png" alt="">
+            <img class="recwhnoh"src="media/Rectangle 2.png" alt="">
             <h4 class="nohomTitle">نهم</h4>
             
             <a class="noh1 mt-2"href="#">نهم یک</a>
