--- a/classes/templates/classes/classes.html
+++ b/classes/templates/classes/classes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>کلاس ها</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="classes/staticclasses.css" />
 </head>
 <body>
     {% if user.is_authenticated %}
